--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -413,7 +413,6 @@
                             android:layout_gravity="center"
                             android:layout_marginTop="16dp"
                             android:textColor="@color/colorBlack"
-                            android:paddingBottom="16dp"
                             />
                         <androidx.cardview.widget.CardView
                             android:id="@+id/warning_cardview"
@@ -422,6 +421,7 @@
                             android:layout_height="32dp"
                             app:cardBackgroundColor="#FF3030"
                             app:cardCornerRadius="8dp"
+                            android:layout_marginBottom="16dp"
                             android:layout_gravity="center_horizontal"
                             >
                             <TextView
