--- a/app/src/main/res/layout/activity_warning.xml
+++ b/app/src/main/res/layout/activity_warning.xml
@@ -28,6 +28,7 @@
           android:id="@+id/time_now"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:layout_marginRight="10dp"
           tools:text="2020-06-25"
           android:textSize="14dp"
           android:textColor="#ffffff"
