--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,22 +104,32 @@
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/tv_login"
-        android:layout_marginTop="40dp"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:text="登录"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:background="@drawable/conor_bg"
-        android:layout_below="@id/card_input"
-        android:gravity="center"
+        android:id="@+id/cv_login"
+        android:layout_below="@+id/card_input"
+        android:layout_marginTop="40dp"
+        app:cardBackgroundColor="@color/colorGray"
+        app:cardCornerRadius="30dp"
         android:layout_marginLeft="128dp"
         android:layout_marginRight="128dp"
+        app:cardElevation="0dp"
         android:foreground="?attr/selectableItemBackground"
         android:focusable="true"
         android:clickable="true"
-        />
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="登录"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:gravity="center"
+            />
+
+    </androidx.cardview.widget.CardView>
+
+
 
 </RelativeLayout>
